[tool.poetry]
name = "ballir-dicom-pixel-deid"
version = "0.1.0"
description = ""
authors = ["bashirlab <jacob.macdonald@duke.edu>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21.4"
pydicom = "^2.2.2"
natsort = "^8.0.0"
tqdm = "^4.62.3"

[tool.poetry.scripts]
anonymize_pixels = 'ballir_dicom_pixel_deid.anonymize.anonymize_pixels:main'

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.10b0", allow-prereleases = true}
flake8 = "^4.0.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
